--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -40,16 +40,25 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-brands-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@gqlapp/authentication-client-react": "^0.1.0",
     "@gqlapp/chat-client-react": "^0.1.0",
+    "@gqlapp/contact-common": "^0.1.0",
     "@gqlapp/contact-client-react": "^0.1.0",
     "@gqlapp/core-client-react": "^0.1.0",
     "@gqlapp/counter-client-react": "^0.1.0",
+    "@gqlapp/favicon-common": "^0.1.0",
     "@gqlapp/forms-client-react": "^0.1.0",
     "@gqlapp/i18n-client-react": "^0.1.0",
     "@gqlapp/i18n-common-react": "^0.1.0",
     "@gqlapp/module-client-react": "^0.1.0",
+    "@gqlapp/page-not-found-client-react": "^0.1.0",
+    "@gqlapp/pagination-client-react": "^0.1.0",
     "@gqlapp/payments-client-react": "^0.1.0",
+    "@gqlapp/post-client-react": "^0.1.0",
     "@gqlapp/reports-client-react": "^0.1.0",
+    "@gqlapp/router-client-react": "^0.1.0",
+    "@gqlapp/upload-client-react": "^0.1.0",
+    "@gqlapp/user-client-react": "^0.1.0",
     "@gqlapp/validation-common-react": "^0.1.0",
     "@loadable/component": "^5.10.1",
     "antd": "^3.19.8",
