--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -52,11 +52,26 @@
   "dependencies": {
     "@babel/preset-env": "^7.0.0",
     "@babel/register": "^7.0.0",
+    "@gqlapp/authentication-server-ts": "^0.1.0",
+    "@gqlapp/config": "^0.1.0",
+    "@gqlapp/core-server-ts": "^0.1.0",
+    "@gqlapp/chat-server-ts": "^0.1.0",
+    "@gqlapp/contact-server-ts": "^0.1.0",
+    "@gqlapp/cookies-server-ts": "^0.1.0",
+    "@gqlapp/counter-server-ts": "^0.1.0",
+    "@gqlapp/graphql-types-server-ts": "^0.1.0",
+    "@gqlapp/post-server-ts": "^0.1.0",
+    "@gqlapp/upload-server-ts": "^0.1.0",
+    "@gqlapp/i18n-server-ts": "^0.1.0",
     "@gqlapp/core-common": "^0.1.0",
     "@gqlapp/database-server-ts": "^0.1.0",
+    "@gqlapp/payments-server-ts": "^0.1.0",
+    "@gqlapp/mailer-server-ts": "^0.1.0",
+    "@gqlapp/reports-server-ts": "^0.1.0",
+    "@gqlapp/debug-server-ts": "^0.1.0",
     "@gqlapp/module-server-ts": "^0.1.0",
+    "@gqlapp/user-server-ts": "^0.1.0",
     "@gqlapp/testing-server-ts": "^0.1.0",
-    "@hofstadter-io/sofa-api": "^0.3.1",
     "@loadable/component": "^5.10.1",
     "@loadable/server": "^5.9.0",
     "@types/compression": "^0.0.36",
